clusters/my-cluster/harbor/localhost-harbor-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-localhost-harbor
  namespace: harbor
spec:
  redirectRegex:
    regex: ^http://localhost/harbor/?$
    replacement: http://harbor.localhost/
    permanent: false
