clusters/my-cluster/harbor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-v2
  namespace: harbor
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: registry-v2
  ports:
    - name: http
      port: 5000
      targetPort: http
      nodePort: 32000
