clusters/my-cluster/harbor/localhost-harbor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localhost-harbor
  namespace: harbor
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: harbor-redirect-localhost-harbor@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: localhost
      http:
        paths:
          - path: /harbor
            pathType: Prefix
            backend:
              service:
                name: harbor
                port:
                  number: 80
